--- a/index.html
+++ b/index.html
@@ -35,14 +35,34 @@
 
 
 <script>
-	// Set the date we're counting down to
-	var startDate = new Date("Apr 17, 2021 23:00:00").getTime();
+	function changeTimezone(date, ianatz) {
+
+		// suppose the date is 12:00 UTC
+		var invdate = new Date(date.toLocaleString('en-US', {
+		timeZone: ianatz
+		}));
+
+		// then invdate will be 07:00 in Toronto
+		// and the diff is 5 hours
+		var diff = date.getTime() - invdate.getTime();
+
+		// so 12:00 in Toronto is 17:00 UTC
+		return new Date(date.getTime() - diff); // needs to substract
+
+	}
+
+	// E.g.
+	//var here = new Date();
+	//var there = changeTimezone(here, "America/Toronto");
+
+	var startDate = new Date("Apr 17, 2021 23:00:00 GMT+8").getTime();
 	
 	// Update the count down every 1 second
 	var x = setInterval(function() {
 	
 	  // Get today's date and time
 	  var now = new Date().getTime();
+	  //now = changeTimezone(now, "Asia/Beijing")
 	  now = now - startDate
 		
 	  // Time calculations for days, hours, minutes and seconds
