--- a/notes/full_map.html
+++ b/notes/full_map.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="imgbox">
-        <img class="center-fit" src='../images/world map.png'>
+        <img class="center-fit" src='../images/world map_start.jpeg'>
     </div>
 </body>
 </html>
