--- a/notes/full_map.html
+++ b/notes/full_map.html
@@ -22,7 +22,8 @@
 </head>
 <body>
     <div class="imgbox">
-        <img class="center-fit" src='../images/world map_start.jpeg'>
+        <img src='../images/world map_start.jpeg' style='height: 100%; width: 100%; object-fit: contain'>
+        <!-- <img class="center-fit" src='../images/world map_start.jpeg'> -->
     </div>
 </body>
 </html>
