--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</div>
 </div>
 <button id="btnClick" class="btn-two blue rounded" style="display: block; margin: 0 auto;" onclick="changetext()">查看小周老师的批改</button>
-<button class="btn-two green rounded"  style="display: block; margin: 0 auto;" onclick="location.href='notes/full_map.html'">开启我们的旅程 =></button>
+<button class="btn-two green rounded"  style="display: block; margin: 0 auto;" onclick="location.href='https://yingyingying-travel.world/'">开启我们的旅程 =></button>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
